Add sandbox runtime to Cohere example

--- a/examples/cohere-code-interpreter-python/cohere_code_interpreter.ipynb
+++ b/examples/cohere-code-interpreter-python/cohere_code_interpreter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
     "\n",
     "import cohere\n",
     "import os\n",
-    "\n",
+    "import sys\n",
     "import json\n",
     "\n",
     "import os\n",
@@ -86,7 +86,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "SYSTEM_PROMPT = \"\"\"\n",
+    "## your job & context\n",
+    "you are a professional personal assistant. you are given tasks to complete and you run python code to solve them.\n",
+    "You DO NOT MAKE SYNTAX MISTAKES OR FORGET ANY IMPORTS\n",
+    "- the python code runs in jupyter notebook.\n",
+    "- every time you call `execute_python` tool, the python code is executed in a separate cell. it's okay to multiple calls to `execute_python`.\n",
+    "- display visualizations using matplotlib or any other visualization library directly in the notebook. don't worry about saving the visualizations to a file.\n",
+    "- you have access to the internet and can make api requests.\n",
+    "- you also have access to the filesystem and can read/write files.\n",
+    "- you have access to various tools.\n",
+    "- you can install any pip package (if it exists) if you need to but the usual packages for data analysis are already preinstalled.\n",
+    "- you can run any python code you want, everything is running in a secure sandbox environment.\n",
+    "\"\"\"\n",
+    "\n",
+    "USER_PROMPT = \"Book an hour long appointment for the first available free slot after 3pm. Create a chart with timeline showing the events in calendar.\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,56 +216,121 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Check what tools the model wants to use and how to use them\n",
+    "# Define chat with model\n",
+    "\n",
+    "def chat(e2b_code_interpreter, user_message):\n",
+    "  print(f\"\\n{'='*50}\\nUser Message: {user_message}\\n{'='*50}\")\n",
+    "\n",
+    "  res = co.chat(\n",
+    "      model=\"command-r-plus\",\n",
+    "      preamble=\"Today is Thursday, may 23, 2024\",\n",
+    "      message=USER_PROMPT,\n",
+    "      force_single_step=False,\n",
+    "      tools=[list_calendar_events_tool, create_calendar_event_tool, execute_python_tool])\n",
+    "\n",
+    "  while res.tool_calls:\n",
+    "    print(res.text) # This will be an observation and a plan with next steps\n",
+    "\n",
+    "    # invoke the recommended tools\n",
+    "    tool_results = []\n",
+    "    for call in res.tool_calls:\n",
+    "      tool_results.append({\"call\": call, \"outputs\": invoke_tool(call)})\n",
+    "\n",
+    "    # send back the tool results\n",
+    "    res = co.chat(\n",
+    "      model=\"command-r-plus\",\n",
+    "      chat_history=res.chat_history,\n",
+    "      message=\"\",\n",
+    "      force_single_step=False,\n",
+    "      tools=[list_calendar_events_tool, create_calendar_event_tool, execute_python_tool],\n",
+    "      tool_results=tool_results,\n",
+    "    )\n",
+    "\n",
+    "  for choice in res.choices:\n",
+    "    if choice.message.tool_calls and len(choice.message.tool_calls) > 0:\n",
+    "      for tool_call in choice.message.tool_calls:\n",
+    "        if tool_call.function.name == \"execute_python\":\n",
+    "          if \"code\" in tool_call.function.arguments:\n",
+    "            args = json.loads(tool_call.function.arguments)\n",
+    "            code = args[\"code\"]          \n",
+    "            print(\"CODE TO RUN\")\n",
+    "            print(code)\n",
+    "            execution_output = code_interpret(e2b_code_interpreter, code)\n",
+    "            return execution_output\n",
+    "    else:\n",
+    "      print(\"Answer:\", choice.message.content)\n",
+    "\n",
+    "\n",
+    "#  print(res.text) # print the final answer\n",
+    "  "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "First, I will check the user's calendar for the day to find the first available free slot after 3pm. Then, I will book an hour-long appointment in that slot. Finally, I will create a chart with a timeline showing the events in the user's calendar.\n",
-      "Listing events: [{\"start\": \"14:00\", \"end\": \"15:00\"}, {\"start\": \"15:00\", \"end\": \"16:00\"}, {\"start\": \"17:00\", \"end\": \"18:00\"}]\n",
-      "The user's calendar shows that they have events from 2pm to 4pm, and then another event from 5pm to 6pm. The first available free slot after 3pm is from 4pm to 5pm. I will now book an hour-long appointment in that slot.\n",
-      "Creating a 1 hour long event at 16:00 on 05/23/2024\n",
-      "I've booked an hour-long appointment for you from 4pm to 5pm today. Here's a chart with a timeline showing the events in your calendar:\n",
       "\n",
-      "| Time | Event |\n",
-      "| --- | --- |\n",
-      "| 2pm to 3pm | Event |\n",
-      "| 3pm to 4pm | Event |\n",
-      "| 4pm to 5pm | Hour-long appointment |\n",
-      "| 5pm to 6pm | Event |\n"
+      "==================================================\n",
+      "User Message: Book an hour long appointment for the first available free slot after 3pm. Create a chart with timeline showing the events in calendar.\n",
+      "==================================================\n",
+      "I will first find the first available free slot after 3pm and then book an hour-long appointment for that time. Then, I will create a chart with a timeline showing the events in the calendar.\n",
+      "Listing events: [{\"start\": \"14:00\", \"end\": \"15:00\"}, {\"start\": \"15:00\", \"end\": \"16:00\"}, {\"start\": \"17:00\", \"end\": \"18:00\"}]\n",
+      "The first available free slot after 3pm is 4pm. Now, I will book an hour-long appointment for that time.\n",
+      "Creating a 1 hour long event at 16:00 on 05/23/2024\n"
+     ]
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "'NonStreamedChatResponse' object has no attribute 'choices'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[63], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me2b_code_interpreter\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CodeInterpreter\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m CodeInterpreter(api_key\u001b[38;5;241m=\u001b[39mE2B_API_KEY) \u001b[38;5;28;01mas\u001b[39;00m code_interpreter:\n\u001b[0;32m----> 6\u001b[0m   execution_output \u001b[38;5;241m=\u001b[39m \u001b[43mchat\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcode_interpreter\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mUSER_PROMPT\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m  \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m execution_output \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo output from the code interpreter. Did the LLM generate any code?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[62], line 32\u001b[0m, in \u001b[0;36mchat\u001b[0;34m(e2b_code_interpreter, user_message)\u001b[0m\n\u001b[1;32m     22\u001b[0m   \u001b[38;5;66;03m# send back the tool results\u001b[39;00m\n\u001b[1;32m     23\u001b[0m   res \u001b[38;5;241m=\u001b[39m co\u001b[38;5;241m.\u001b[39mchat(\n\u001b[1;32m     24\u001b[0m     model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcommand-r-plus\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     25\u001b[0m     chat_history\u001b[38;5;241m=\u001b[39mres\u001b[38;5;241m.\u001b[39mchat_history,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     29\u001b[0m     tool_results\u001b[38;5;241m=\u001b[39mtool_results,\n\u001b[1;32m     30\u001b[0m   )\n\u001b[0;32m---> 32\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m choice \u001b[38;5;129;01min\u001b[39;00m \u001b[43mres\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchoices\u001b[49m:\n\u001b[1;32m     33\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m choice\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mtool_calls \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(choice\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mtool_calls) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m tool_call \u001b[38;5;129;01min\u001b[39;00m choice\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mtool_calls:\n",
+      "\u001b[0;31mAttributeError\u001b[0m: 'NonStreamedChatResponse' object has no attribute 'choices'"
      ]
     }
    ],
    "source": [
-    "# Check what tools the model wants to use and how to use them\n",
-    "res = co.chat(\n",
-    "    model=\"command-r-plus\",\n",
-    "    preamble=\"Today is Thursday, may 23, 2024\",\n",
-    "    message=\"Book an hour long appointment for the first available free slot after 3pm. Create a chart with timeline showing the events in calendar.\",\n",
-    "    force_single_step=False,\n",
-    "    tools=[list_calendar_events_tool, create_calendar_event_tool, execute_python_tool])\n",
+    "# Print the results\n",
     "\n",
-    "while res.tool_calls:\n",
-    "  print(res.text) # This will be an observation and a plan with next steps\n",
+    "from e2b_code_interpreter import CodeInterpreter\n",
     "\n",
-    "  # invoke the recommended tools\n",
-    "  tool_results = []\n",
-    "  for call in res.tool_calls:\n",
-    "    tool_results.append({\"call\": call, \"outputs\": invoke_tool(call)})\n",
-    "\n",
-    "  # send back the tool results\n",
-    "  res = co.chat(\n",
-    "    model=\"command-r-plus\",\n",
-    "    chat_history=res.chat_history,\n",
-    "    message=\"\",\n",
-    "    force_single_step=False,\n",
-    "    tools=[list_calendar_events_tool, create_calendar_event_tool, execute_python_tool],\n",
-    "    tool_results=tool_results,\n",
+    "with CodeInterpreter(api_key=E2B_API_KEY) as code_interpreter:\n",
+    "  execution_output = chat(\n",
+    "    code_interpreter,\n",
+    "    USER_PROMPT,\n",
     "  )\n",
     "\n",
-    "print(res.text) # print the final answer"
+    "  if execution_output == None:\n",
+    "    print(\"No output from the code interpreter. Did the LLM generate any code?\")\n",
+    "    sys.exit(1)\n",
+    "\n",
+    "  # Access stdout\n",
+    "  print(\"Stdout:\", execution_output.logs.stdout)\n",
+    "  # Access stderr\n",
+    "  print(\"Stderr:\", execution_output.logs.stderr)\n",
+    "\n",
+    "  # Access any runtime errors\n",
+    "  print(\"AI-generated Python runtime error:\", execution_output.error)\n",
+    "\n",
+    "  # Access any results of code execution - charts, interpreter last line, images, etc.\n",
+    "  print(\"Results:\", execution_output.results)\n",
+    "  if len(execution_output.results) == 0:\n",
+    "    sys.exit(0)\n",
+    "\n",
+    "execution_output.results[0]"
    ]
   }
  ],
