Debugging of Cohere example

--- a/examples/cohere-code-interpreter-python/cohere_code_interpreter.ipynb
+++ b/examples/cohere-code-interpreter-python/cohere_code_interpreter.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 110,
    "metadata": {},
    "outputs": [
     {
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -104,17 +104,16 @@
     "- you can run any python code you want, everything is running in a secure sandbox environment.\n",
     "\"\"\"\n",
     "\n",
-    "USER_PROMPT = \"Book an hour long appointment for the first available free slot after 3pm. Create a chart with timeline showing the events in calendar.\""
+    "USER_PROMPT = \"Book an hour long appointment for the first available free slot after 3pm. Using puthon code, generate a chart with timeline showing the events in calendar.\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Define the tools\n",
-    "\n",
     "\n",
     "def list_calendar_events(date: str):\n",
     "  events = '[{\"start\": \"14:00\", \"end\": \"15:00\"}, {\"start\": \"15:00\", \"end\": \"16:00\"}, {\"start\": \"17:00\", \"end\": \"18:00\"}]'\n",
@@ -208,7 +207,7 @@
     "    code = tool_call.parameters[\"code\"]\n",
     "\n",
     "    return [{\n",
-    "        \"is_success\": code_interpret(code)\n",
+    "        \"is_success\": code_interpret(e2b_code_interpreter, code)  # TBD Fix\n",
     "    }]\n",
     "  else:\n",
     "    raise f\"Unknown tool name '{tool_call.name}'\""
@@ -216,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,6 +238,13 @@
     "    # invoke the recommended tools\n",
     "    tool_results = []\n",
     "    for call in res.tool_calls:\n",
+    "      # Add print statements to inspect the variables\n",
+    "      print()\n",
+    "      print(f\"🚨 MONITORING call: {call}\")\n",
+    "      print()\n",
+    "      print(f\"🚨 invoke_tool(call): {invoke_tool(call)}\")\n",
+    "      print()\n",
+    "\n",
     "      tool_results.append({\"call\": call, \"outputs\": invoke_tool(call)})\n",
     "\n",
     "    # send back the tool results\n",
@@ -250,8 +256,7 @@
     "      tools=[list_calendar_events_tool, create_calendar_event_tool, execute_python_tool],\n",
     "      tool_results=tool_results,\n",
     "    )\n",
-    "\n",
-    "  for choice in res.choices:\n",
+    "  for choice in res.chat_history:   # TBD: Maybe it's not chat history? What is the correct attribute? (Instead of choices)\n",
     "    if choice.message.tool_calls and len(choice.message.tool_calls) > 0:\n",
     "      for tool_call in choice.message.tool_calls:\n",
     "        if tool_call.function.name == \"execute_python\":\n",
@@ -272,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -281,24 +286,41 @@
      "text": [
       "\n",
       "==================================================\n",
-      "User Message: Book an hour long appointment for the first available free slot after 3pm. Create a chart with timeline showing the events in calendar.\n",
+      "User Message: Book an hour long appointment for the first available free slot after 3pm. Using puthon code, generate a chart with timeline showing the events in calendar.\n",
       "==================================================\n",
-      "I will first find the first available free slot after 3pm and then book an hour-long appointment for that time. Then, I will create a chart with a timeline showing the events in the calendar.\n",
+      "First, I will use the list_calendar_events tool to find the first available free slot after 3pm. Then, I will use the create_calendar_event_tool to book an hour-long appointment at that time. Finally, I will use Python code to generate a chart with a timeline showing the events in the calendar.\n",
+      "\n",
+      "🚨 MONITORING call: name='list_calendar_events' parameters={'date': '05/23/2024'}\n",
+      "\n",
       "Listing events: [{\"start\": \"14:00\", \"end\": \"15:00\"}, {\"start\": \"15:00\", \"end\": \"16:00\"}, {\"start\": \"17:00\", \"end\": \"18:00\"}]\n",
-      "The first available free slot after 3pm is 4pm. Now, I will book an hour-long appointment for that time.\n",
-      "Creating a 1 hour long event at 16:00 on 05/23/2024\n"
+      "🚨 invoke_tool(call): [{'events': '[{\"start\": \"14:00\", \"end\": \"15:00\"}, {\"start\": \"15:00\", \"end\": \"16:00\"}, {\"start\": \"17:00\", \"end\": \"18:00\"}]'}]\n",
+      "\n",
+      "Listing events: [{\"start\": \"14:00\", \"end\": \"15:00\"}, {\"start\": \"15:00\", \"end\": \"16:00\"}, {\"start\": \"17:00\", \"end\": \"18:00\"}]\n",
+      "The first available free slot after 3pm is 4pm. Now, I will use the create_calendar_event_tool to book an hour-long appointment at that time.\n",
+      "\n",
+      "🚨 MONITORING call: name='create_calendar_event_tool' parameters={'date': '06/20/2024', 'duration': 1, 'time': '16:00'}\n",
+      "\n",
+      "Creating a 1 hour long event at 16:00 on 06/20/2024\n",
+      "🚨 invoke_tool(call): [{'is_success': True}]\n",
+      "\n",
+      "Creating a 1 hour long event at 16:00 on 06/20/2024\n",
+      "The hour-long appointment has been successfully booked for 4pm. Now, I will use Python code to generate a chart with a timeline showing the events in the calendar.\n",
+      "\n",
+      "🚨 MONITORING call: name='execute_python' parameters={'code': 'import matplotlib.pyplot as plt\\n\\n# Load the calendar events\\nevents = [\\n    {\"start\": \"14:00\", \"end\": \"15:00\"},\\n    {\"start\": \"15:00\", \"end\": \"16:00\"},\\n    {\"start\": \"16:00\", \"end\": \"17:00\"},\\n    {\"start\": \"17:00\", \"end\": \"18:00\"}\\n]\\n\\n# Extract start and end times\\nstart_times = [event[\"start\"] for event in events]\\nend_times = [event[\"end\"] for event in events]\\n\\n# Create a timeline chart\\nplt.figure(figsize=(10, 6))\\nplt.plot(start_times, range(len(start_times)), marker=\\'o\\', linestyle=\\'-\\', color=\\'b\\', label=\\'Start\\')\\nplt.plot(end_times, range(len(end_times)), marker=\\'s\\', linestyle=\\'-\\', color=\\'r\\', label=\\'End\\')\\n\\n# Add labels and legend\\nplt.xlabel(\\'Time\\')\\nplt.ylabel(\\'Event\\')\\nplt.xticks(rotation=45)\\nplt.legend()\\n\\n# Display the chart\\nplt.tight_layout()\\nplt.show()'}\n",
+      "\n"
      ]
     },
     {
-     "ename": "AttributeError",
-     "evalue": "'NonStreamedChatResponse' object has no attribute 'choices'",
+     "ename": "NameError",
+     "evalue": "name 'e2b_code_interpreter' is not defined",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[63], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me2b_code_interpreter\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CodeInterpreter\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m CodeInterpreter(api_key\u001b[38;5;241m=\u001b[39mE2B_API_KEY) \u001b[38;5;28;01mas\u001b[39;00m code_interpreter:\n\u001b[0;32m----> 6\u001b[0m   execution_output \u001b[38;5;241m=\u001b[39m \u001b[43mchat\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcode_interpreter\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mUSER_PROMPT\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m  \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m execution_output \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo output from the code interpreter. Did the LLM generate any code?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
-      "Cell \u001b[0;32mIn[62], line 32\u001b[0m, in \u001b[0;36mchat\u001b[0;34m(e2b_code_interpreter, user_message)\u001b[0m\n\u001b[1;32m     22\u001b[0m   \u001b[38;5;66;03m# send back the tool results\u001b[39;00m\n\u001b[1;32m     23\u001b[0m   res \u001b[38;5;241m=\u001b[39m co\u001b[38;5;241m.\u001b[39mchat(\n\u001b[1;32m     24\u001b[0m     model\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcommand-r-plus\u001b[39m\u001b[38;5;124m\"\u001b[39m,\n\u001b[1;32m     25\u001b[0m     chat_history\u001b[38;5;241m=\u001b[39mres\u001b[38;5;241m.\u001b[39mchat_history,\n\u001b[0;32m   (...)\u001b[0m\n\u001b[1;32m     29\u001b[0m     tool_results\u001b[38;5;241m=\u001b[39mtool_results,\n\u001b[1;32m     30\u001b[0m   )\n\u001b[0;32m---> 32\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m choice \u001b[38;5;129;01min\u001b[39;00m \u001b[43mres\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mchoices\u001b[49m:\n\u001b[1;32m     33\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m choice\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mtool_calls \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(choice\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mtool_calls) \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[1;32m     34\u001b[0m     \u001b[38;5;28;01mfor\u001b[39;00m tool_call \u001b[38;5;129;01min\u001b[39;00m choice\u001b[38;5;241m.\u001b[39mmessage\u001b[38;5;241m.\u001b[39mtool_calls:\n",
-      "\u001b[0;31mAttributeError\u001b[0m: 'NonStreamedChatResponse' object has no attribute 'choices'"
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[116], line 6\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01me2b_code_interpreter\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m CodeInterpreter\n\u001b[1;32m      5\u001b[0m \u001b[38;5;28;01mwith\u001b[39;00m CodeInterpreter(api_key\u001b[38;5;241m=\u001b[39mE2B_API_KEY) \u001b[38;5;28;01mas\u001b[39;00m code_interpreter:\n\u001b[0;32m----> 6\u001b[0m   execution_output \u001b[38;5;241m=\u001b[39m \u001b[43mchat\u001b[49m\u001b[43m(\u001b[49m\n\u001b[1;32m      7\u001b[0m \u001b[43m    \u001b[49m\u001b[43mcode_interpreter\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      8\u001b[0m \u001b[43m    \u001b[49m\u001b[43mUSER_PROMPT\u001b[49m\u001b[43m,\u001b[49m\n\u001b[1;32m      9\u001b[0m \u001b[43m  \u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m   \u001b[38;5;28;01mif\u001b[39;00m execution_output \u001b[38;5;241m==\u001b[39m \u001b[38;5;28;01mNone\u001b[39;00m:\n\u001b[1;32m     12\u001b[0m     \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mNo output from the code interpreter. Did the LLM generate any code?\u001b[39m\u001b[38;5;124m\"\u001b[39m)\n",
+      "Cell \u001b[0;32mIn[114], line 24\u001b[0m, in \u001b[0;36mchat\u001b[0;34m(e2b_code_interpreter, user_message)\u001b[0m\n\u001b[1;32m     22\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m🚨 MONITORING call: \u001b[39m\u001b[38;5;132;01m{\u001b[39;00mcall\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     23\u001b[0m \u001b[38;5;28mprint\u001b[39m()\n\u001b[0;32m---> 24\u001b[0m \u001b[38;5;28mprint\u001b[39m(\u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124m🚨 invoke_tool(call): \u001b[39m\u001b[38;5;132;01m{\u001b[39;00m\u001b[43minvoke_tool\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcall\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m\"\u001b[39m)\n\u001b[1;32m     25\u001b[0m \u001b[38;5;28mprint\u001b[39m()\n\u001b[1;32m     27\u001b[0m tool_results\u001b[38;5;241m.\u001b[39mappend({\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcall\u001b[39m\u001b[38;5;124m\"\u001b[39m: call, \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124moutputs\u001b[39m\u001b[38;5;124m\"\u001b[39m: invoke_tool(call)})\n",
+      "Cell \u001b[0;32mIn[113], line 95\u001b[0m, in \u001b[0;36minvoke_tool\u001b[0;34m(tool_call)\u001b[0m\n\u001b[1;32m     91\u001b[0m \u001b[38;5;28;01melif\u001b[39;00m tool_call\u001b[38;5;241m.\u001b[39mname \u001b[38;5;241m==\u001b[39m execute_python_tool[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mname\u001b[39m\u001b[38;5;124m\"\u001b[39m]:\n\u001b[1;32m     92\u001b[0m   code \u001b[38;5;241m=\u001b[39m tool_call\u001b[38;5;241m.\u001b[39mparameters[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mcode\u001b[39m\u001b[38;5;124m\"\u001b[39m]\n\u001b[1;32m     94\u001b[0m   \u001b[38;5;28;01mreturn\u001b[39;00m [{\n\u001b[0;32m---> 95\u001b[0m       \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mis_success\u001b[39m\u001b[38;5;124m\"\u001b[39m: code_interpret(\u001b[43me2b_code_interpreter\u001b[49m, code)  \u001b[38;5;66;03m# TBD Fix\u001b[39;00m\n\u001b[1;32m     96\u001b[0m   }]\n\u001b[1;32m     97\u001b[0m \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     98\u001b[0m   \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;124mf\u001b[39m\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mUnknown tool name \u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;132;01m{\u001b[39;00mtool_call\u001b[38;5;241m.\u001b[39mname\u001b[38;5;132;01m}\u001b[39;00m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124m\"\u001b[39m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'e2b_code_interpreter' is not defined"
      ]
     }
    ],
